<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightblue"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/titleText"
        android:layout_width="317dp"
        android:layout_height="76dp"
        android:layout_marginEnd="33dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="16dp"
        android:text="@string/currency_conversion_exchange"
        android:textAlignment="center"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/dollarText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="43dp"
        android:layout_marginTop="50dp"
        android:labelFor="@+id/convert_to_value"
        android:text="@string/dollar_amount"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleText" />

    <TextView
        android:id="@+id/convert_to"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="89dp"
        android:labelFor="@+id/convert_to_value"
        android:text="@string/convert_to"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/apply_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dollarText"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/dollar_amount_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="191dp"
        android:layout_marginStart="17dp"
        android:layout_marginTop="142dp"
        android:text="@string/amount_data"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/dollarText"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/convert_to_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="89dp"
        android:layout_marginEnd="171dp"
        android:layout_marginStart="47dp"
        android:layout_marginTop="50dp"
        android:text="@string/convert_to_value"
        android:textColor="@android:color/background_dark"
        android:textColorHint="@android:color/background_dark"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/apply_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/convert_to"
        app:layout_constraintTop_toBottomOf="@+id/dollarText" />

    <Button
        android:id="@+id/apply_button"
        android:layout_width="145dp"
        android:layout_height="77dp"
        android:layout_marginBottom="103dp"
        android:layout_marginStart="32dp"
        android:background="@android:color/holo_green_dark"
        android:onClick="currencyConvert"
        android:text="@string/apply"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/close_app"
        android:layout_width="141dp"
        android:layout_height="75dp"
        android:layout_marginBottom="103dp"
        android:layout_marginEnd="32dp"
        android:background="@android:color/holo_red_light"
        android:onClick="closeApp"
        android:text="@string/close"
        android:textColor="@android:color/background_light"
        android:textColorHint="@android:color/white"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</android.support.constraint.ConstraintLayout>